public class Strings
{
    public const string ANIMATION_SPAWN = "Spawn";
    public const string ANIMATION_IDLE = "Idle";
    public const string ANIMATION_RUN = "Run";
    public const string ANIMATION_MELEEATTACK = "MeleeAttack";
    public const string ANIMATION_RANGEDATTACK = "RangedAttack";
    public const string ANIMATION_DEATH = "Death";
}
